infrastructure/common/opensearch/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opensearch
  labels:
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/instance: opensearch
